--- a/w04/d2/workshop/index.html
+++ b/w04/d2/workshop/index.html
@@ -7,7 +7,17 @@
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-
+    <div>
+      <center><img class="gif"src="redbull.gif" alt="bull" width="150px" height="150px">
+    <h1 id="bull">RedBull</h1>
+    <img class="gif" src="redbull.gif" alt="bull" width="150px" height="150px">
+  </center>
+  </div>
+  <center><h2><u>Check Out All Our Products!</u></h2></center>
+    <center><button type="button" name="button">Click Here</button></center>
+    <img id="bull">
     <script type="text/javascript" src="main.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js">
+      </script>
   </body>
 </html>
